fixes text alignment for links styled as buttons

--- a/src/client/common/forms/button.scss
+++ b/src/client/common/forms/button.scss
@@ -31,6 +31,7 @@
   margin: $margin-top 0 0 0;
   overflow: hidden;
   padding: 0.5em 1em;
+  text-align: center;
   text-decoration: none;
   text-overflow: ellipsis;
   user-select: none;
